               with only wind speed or only wind direction into the PREPBUFR
               files (encoded in SOB and DDO, resp.)].  Prior to this fix,
               missing values for UOB and VOB were generating nonsensical bogus
               winds or causing the program to stop abnormally with codition
               code 64.

 Fixed file changes:
   prepobs_prep.bufrtable (all related to changes in prepdata above):
    - 1) Added Table D event sequence W1_EVENT to record events for wind
         dir/speed (kts) for non-surface reports. This is added to Table D
         sequences PRSLEVEL and PRSLEVLA.
    - 2) Added Table D event sequence W2_EVENT to record events for wind
         dir/speed (m/sec) for surface reports. This is added to Table A
         entries ADPSFC, SFCSHP and MSONET.
    - 3) Table D sequence PRSLEVEL is replaced by
         CAT <P___INFO> <Q___INFO> <T___INFO> <Z___INFO> <W___INFO>
         in Table A entries ADPSFC, SFCSHP and MSONET and by
         CAT <P___INFO> <Z___INFO>
         in Table A entry SFCBOG.
    - 4) Removed Table D event sequence DF_EVENT as it is replaced by W1_EVENT
         and W2_EVENT.  This is removed from Table D sequence W___INFO.
    - 5) Removed Table D sequence WSPD_SEQ as it is replaced by W2_EVENT. This
         is removed from Table A entries ADPSFC, SFCSHP and MSONET.
    - 6) Updates to some Table B and D descriptions related to wind.


 Output changes:
 ---------------
   All jobs executing this version of obsproc_prep:
    - ...
  (For specific network changes see " Output changes" in Release Notes for that
   network.)


 Compute Resource Information:
 -----------------------------
   All source codes:
    - continue to link to version 2.0.6 of w3nco library
    - continue to link to version 10.2.5 of bufr library
   Source codes prepobs_cqcbufr, prepobs_prepacpf, prepobs_prepacqc,
   prepobs_prepdata, prepobs_prevents, syndat_syndata:
    - continue to link to version 2.2.0 of w3emc library