@@ -140,21 +140,32 @@ C        WITH MORE STANDARD GET_ENVIRONMENT_VARIABLE; USE FORMATTED
 C        PRINT STATEMENTS WHERE PREVIOUSLY UNFORMATTED PRINT WAS > 80
 C        CHARACTERS; REPLACED FORMATTED ARRAY SUBROUTINE ARGUMENTS WITH
 C        VARIABLES
-C 2014-09-05  D. A. KEYSER - CHANGES MADE IN ENTRY VWNCOM TO PREVENT
-C        ARRAY OVERFLOW IN 2ND ELEMENT OF AXIWND WHEN ENTRY IS CALLED
-C        OUT OF SUBROUTINE MM2DVO WHERE NCMPVO IS PASSED IN WITH VALUE
-C        OF 1 AND DEBUGGING IS TURNED ON AT RUN TIME (NOTE: MAY NOT BE
-C        CORRECT SOLUTION BUT YIELDS SAME OUTPUT BOGUS WINDS AS WHEN
-C        THIS CHANGE IS NOT MADE AND CODE RUNS W/O DEBUGGING TURNED ON
-C        AT RUN TIME  --> THIS FIX ALLOWS CODE TO RUN TO COMPLETION
-C        WHEN DEBUGGING IS TURNED ON AT RUN TIME). CHANGE IN SUBR.
-C        SURPRP - IF EITHER UOB OR VOB (OR BOTH) ARE MISSING, SKIP THE
-C        PROCESSING OF INPUT PREPBUFR WIND REPORT LEVEL (UOB AND/OR VOB
-C        CAN NOW BE MISSING FOR SURFACE WIND REPORTS SINCE A RECENT
-C        IMPLEMENTATION ALLOWS REPORTS WITH ONLY WIND SPEED OR ONLY
-C        WIND DIRECTION TO STORE THESE IN SOB AND DDO, RESP. - PRIOR TO
-C        TODAY'S FIX MISSING VALUES FOR UOB AND VOB WERE GENERATING
-C        NONSENSICAL BOGUS WINDS OR CAUSING PROGRAM TO ABORT).
+C 2014-09-05  D. A. KEYSER
+C           - CHANGES MADE IN ENTRY VWNCOM TO PREVENT ARRAY OVERFLOW IN
+C        2ND ELEMENT OF AXIWND WHEN ENTRY IS CALLED OUT OF SUBROUTINE
+C        MM2DVO WHERE NCMPVO IS PASSED IN WITH VALUE OF 1 AND DEBUGGING
+C        IS TURNED ON AT RUN TIME (NOTE: MAY NOT BE CORRECT SOLUTION
+C        BUT YIELDS SAME OUTPUT BOGUS WINDS AS WHEN THIS CHANGE IS NOT
+C        MADE AND CODE RUNS W/O DEBUGGING TURNED ON AT RUN TIME  -->
+C        THIS FIX ALLOWS CODE TO RUN TO COMPLETION WHEN DEBUGGING IS
+C        TURNED ON AT RUN TIME).
+C           - CHANGE IN SUBR. SURPRP: IF EITHER UOB OR VOB (OR BOTH)
+C        ARE MISSING, SKIP THE PROCESSING OF INPUT PREPBUFR WIND REPORT
+C        LEVEL (UOB AND/OR VOB CAN NOW BE MISSING FOR SURFACE WIND
+C        REPORTS SINCE A RECENT IMPLEMENTATION ALLOWS REPORTS WITH ONLY
+C        WIND SPEED OR ONLY WIND DIRECTION TO STORE THESE IN SOB AND
+C        DDO, RESP. - PRIOR TO THIS FIX IN SYNDATA, MISSING VALUES FOR
+C        UOB AND VOB WERE GENERATING NONSENSICAL BOGUS WINDS OR CAUSING
+C        PROGRAM TO ABORT).
+C           - PARAMETERS LDXDIM AND NDATMX (STORAGE LIMIT FOR NUMBER OF
+C        OBSERVATIONS IN STORM VICINITY) INCREASED FROM 500 TO 1000 IN
+C        SUBR. CMPSIT.  A TRAP REMAINS SET FOR ARRAYS EXCEEDING LDXDIM
+C        IN ENTRY ANLCOM AND FOR ARRAYS EXCEEDING NDATMX IN ENTRY
+C        OWNCOM.  HOWEVER, THE TRAP FOR LDXDIM HAD TO BE FIXED AS IT
+C        WAS PREVIOUSLY INVOKED ONLY WHEN THE LIMIT WAS EXCEEDED BY 1,
+C        TOO LATE FOR ARRAY OVERFLOW (AND PROGRAM TERMINATION WHEN
+C        DEBUGGING IS TURNED ON AT RUN TIME).
+C
 C
 C USAGE:
 C   INPUT FILES:
@@ -9259,11 +9270,15 @@ C
       PARAMETER (NLVLBN= 4)
       PARAMETER (NCORBN= 2)
       PARAMETER (NVARBN= 3)
-      PARAMETER (NDATMX=500)
+cdak  fix 9/5/14 vvvvvvvvvv
+ccccc PARAMETER (NDATMX=500)
+ccccc PARAMETER (LDXDIM=500)
+      PARAMETER (NDATMX=1000)
+      PARAMETER (LDXDIM=1000)
+cdak  fix 9/5/14 ^^^^^^^^^^
       PARAMETER (NVROUT=16)
       PARAMETER (IOUTMX= 6)
       PARAMETER (NRBNPS=36)
-      PARAMETER (LDXDIM=500)
       PARAMETER (NDIM=70)
 C
       CHARACTER STMNMZ*(*)
@@ -10033,7 +10048,10 @@ C     STORE OBS FOR SPLINE FITTING
 C
       NMSNG=0
       DO 560 NSPL=1,NPSBIN(NRPS,1)
-         IF(LDXX .LE. LDXDIM)  THEN
+cdak  fix 9/5/14 vvvvvvvvvv
+ccccccc  IF(LDXX .LE. LDXDIM)  THEN
+         IF(LDXX+1 .LE. LDXDIM)  THEN
+cdak  fix 9/5/14 ^^^^^^^^^^
             LDXX=LDXX+1
             SPLDTA(LDXX)=PSDAT(INDZ,NSPL,NRPS)
             YDZ(LDXX)=PSDAT(INDR,NSPL,NRPS)*1.E-3
@@ -27143,9 +27161,9 @@ C        MISSING, SKIP THE PROCESSING OF INPUT PREPBUFR WIND REPORT
 C        LEVEL (UOB AND/OR VOB CAN NOW BE MISSING FOR SURFACE WIND
 C        REPORTS SINCE A RECENT IMPLEMENTATION ALLOWS REPORTS WITH ONLY
 C        WIND SPEED OR ONLY WIND DIRECTION TO STORE THESE IN SOB AND
-C        DDO, RESP. - PRIOR TO TODAY'S FIX MISSING VALUES FOR UOB AND
-C        VOB WERE GENERATING NONSENSICAL BOGUS WINDS OR CAUSING PROGRAM
-C        TO ABORT).
+C        DDO, RESP. - PRIOR TO THIS FIX IN SYNDATA, MISSING VALUES FOR
+C        UOB AND VOB WERE GENERATING NONSENSICAL BOGUS WINDS OR CAUSING
+C        PROGRAM TO ABORT).
 C
 C USAGE:    CALL SURPRP(IUNTPN,IUNTBH,IUNTDH,PTOP,XMLZ,XMRZ,YNBZ,YNTZ,
 C                       RPOT,SPDPOT,NOBWMN,IYRZ,DAY00,NDATA,DATA,
@@ -27267,7 +27285,7 @@ C  --------------------
  1249 FORMAT(/' ===> SURPRP: ALL MESSAGES IN INPUT PREPBUFR FILE IN ',
      $ 'UNIT',I3,' WITH TABLE A ENTRY "',A8,'" PROCESSED -- '/15X,
      $ 'NUMBER OF INDIVIDUAL REPORTS DECODED OUT OF THESE MESSAGES =',
-     $ I5/)
+     $ I6/)
          ICNTTA = 0
          PRINT 1240, IUNTPN,SUBSET,IDATBF
  1240 FORMAT(/' ===> SURPRP: NEXT MESSAGE IN INPUT PREPBUFR FILE IN ',
@@ -27485,7 +27503,7 @@ C  ---------------------------------------------------------------
             ENDIF
 
          ELSE  IF(KK.EQ.2)  THEN
-cdak  fix 9/8/14 vvvvvvvvvv
+cdak  fix 9/5/14 vvvvvvvvvv
             if(ibfms(OBS_8(3,MSEL)).gt.0.or.
      $         ibfms(OBS_8(4,MSEL)).gt.0)  then
 
@@ -27502,7 +27520,7 @@ c  -------------------------------------------------------------------
      $ 'LEVEL OF THIS REPORT'/)
                go to 30
            endif
-cdak  fix 9/8/14 ^^^^^^^^^^
+cdak  fix 9/5/14 ^^^^^^^^^^
 
 C  WIND REPORTS: USE DATA ON ALL LEVELS BELOW PTOP
 C  -----------------------------------------------
@@ -28837,7 +28855,7 @@ C  ------------------------------------------------------------
  1249 FORMAT(/' ===> EDTPRP: ALL MESSAGES IN INPUT PREPBUFR FILE IN ',
      $ 'UNIT',I3,' WITH TABLE A ENTRY "',A8,'" PROCESSED -- '/15X,
      $ 'NUMBER OF INDIVIDUAL REPORTS DECODED OUT OF THESE MESSAGES =',
-     $ I5/)
+     $ I6/)
          ICNTTA = 0
          PRINT 1240, IUNTPN,SUBSET,JDATBF
  1240 FORMAT(/' ===> EDTPRP: NEXT MESSAGE IN INPUT PREPBUFR FILE IN ',
